2017-10-05  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        Generate a compile error if release is built without compiler optimizations
        https://bugs.webkit.org/show_bug.cgi?id=177665

        Reviewed by Brian Burg.

        Default to RelWithDebInfo if CMAKE_BUILD_TYPE is unset.

        * CMakeLists.txt:

2017-10-02  Olivier Blin  <olivier.blin@softathome.com>

        [WPE] Remove GnuTLS dependency
        https://bugs.webkit.org/show_bug.cgi?id=177750

        Reviewed by Michael Catanzaro.

        libgcrypt is used by default instead of GnuTLS.
        See bug 163125

        * Source/cmake/OptionsWPE.cmake:

2017-10-02  Olivier Blin  <olivier.blin@softathome.com>

        [WPE] Do not require XSLT if disabled
        https://bugs.webkit.org/show_bug.cgi?id=177752

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsWPE.cmake: libxslt is not a hard dep

2017-09-26  Zan Dobersek  <zdobersek@igalia.com>

        [CMake] Use implicit include directories for Clang as well
        https://bugs.webkit.org/show_bug.cgi?id=177426

        Reviewed by Michael Catanzaro.

        In WebKitCompilerFlags.cmake, also gather and use the system
        include directories for C and C++ build targets when compiling
        with Clang. This fixes compilation errors when cross-building
        WebKit with a Clang-based toolchain.

        COMPILER_IS_GCC_OR_CLANG is used to check for GCC or Clang
        compilers. That only checks for the C++ compiler, but it's not
        reasonable to expect two widely different compilers being used
        for C and C++ compilation.

        * Source/cmake/WebKitCompilerFlags.cmake:

2017-09-20  Alberto Garcia  <berto@igalia.com>

        Fix HPPA and Alpha builds
        https://bugs.webkit.org/show_bug.cgi?id=177224

        Reviewed by Alex Christensen.

        * CMakeLists.txt:

2017-09-19  Carlos Alberto Lopez Perez  <clopez@igalia.com>
