@@ -710,6 +710,7 @@ if (ENABLE_GRAPHICS_CONTEXT_3D)
         list(APPEND WebKit2_LIBRARIES
             ${LIBEPOXY_LIBRARIES}
         )
+        add_definitions(${LIBEPOXY_DEFINITIONS})
     else ()
         if (USE_OPENGL)
             list(APPEND WebKit2_SYSTEM_INCLUDE_DIRECTORIES
